--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f7f7f7;
   margin: 0;
+  background-color: #f7f7f7;
   display: grid;
   gap: 60px;
   justify-items: center;
@@ -15,24 +15,25 @@ img {
   display: block;
 }
 
+a {
+  text-decoration: none;
+}
+
 p, h1, h2, h3 {
   margin: 0;
 }
 
 p {
   font-size: 20px;
-}
-
-a {
-  text-decoration: none;
+  line-height: 1.3;
 }
 
 /*HEADER - LOGO E MENU*/
 
 .menu {
   display: flex;
-  gap: 20px;
   flex-wrap: wrap;
+  gap: 20px;
   justify-content: center;
 }
 
@@ -69,28 +70,26 @@ main {
   border-radius: 4px;
 }
 
-.conteudo-3 {
+.vantagens-titulo {
   font-size: 64px;
   color: rgba(0, 0, 0, 0.2);
   text-align: right;
   padding: 40px;
-  align-self: center;
 }
 
 .conteudo-4 {
   background-color: #ffffff;
   padding: 40px;
-
 }
 
-.motor-eletrico, .velocidade, .rastreador {
+.item {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
 }
 
-.motor-eletrico, .velocidade, .rastreador p {
+.item p {
   grid-column: 2;
 }
 
@@ -100,6 +99,6 @@ main {
   background-color: #ffffff;
   width: 100%;
   text-align: center;
-  padding: 40px;
+  padding: 20px;
   box-sizing: border-box;
 }
