--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ p, h1, h2, h3 {
 
 p {
   font-size: 20px;
-  line-height: 1.3;
 }
 
 /*HEADER - LOGO E MENU*/
@@ -74,6 +73,7 @@ main {
   font-size: 64px;
   color: rgba(0, 0, 0, 0.2);
   text-align: right;
+  align-self: center;
   padding: 40px;
 }
 
